Changelog for mk-log-parser:

   * Enhanced the query fingerprinting (issue 220).
   * Query_time with two decimal points caused a crash (issue 234).
   * Very large INSERT statements from mysqldump segfaulted on older Perl.
   * Very large attribute values in slowlogs caused a crash (issue 197).
   * Added the ability to watch the processlist with --processlist (issue 151).
   * Added --execute and --filter options.
   * Fixed and updated POD.

2008-12-29: version 0.9.1

   * Added --analyze option to combine analysis and --review (issue 162).
   * Added --fingerprints (-f) option (issue 160).
   * Trying to take log of 0 caused a crash (issue 141).
   * Improved performance of log parsing and fingerprinting about 2x (issue 137).
   * Slow log parsing was buggy (issue 136 and many smaller issues discovered).
   * Converted a lot of hardcoded things into dynamically built functions.
   * Added more information to the default output and reformatted it.
   * Incompatible changes to fingerprint; old reviews will lost their history.
   * Much enhanced --review functionality.
   * Default --top to 95% to analyze the top 95% of the load (issue 171).

2008-12-01: version 0.9.0

   * Initial release.