@@ -1,0 +1,21 @@
+# Query 001 (0 QPS) ID: 0x6083030C4A5D8996 at byte 0 ____________________
+#              total    %     min     max     avg     95%  stddev  median
+#     Count        1  100
+#      Time       2s  100      2s      2s      2s      2s       0      2s
+#      Lock        0    0       0       0       0       0       0       0
+# Rows sent        1  100       1       1       1       1       0       1
+# Rows exam        0    0       0       0       0       0       0       0
+#       DBs  
+#     Users  root
+# Time range 2007-10-15T21:43:52 to 2007-10-15T21:43:52
+# Execution times
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s  ################################################################
+#  10s+
+INSERT INTO `foo` VALUES (1, 2, 3)/*multi-value INSERT omitted*/\G
+
